# ewmh-status-listener

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs
